{
  "version": 4,
  "terraform_version": "1.2.4",
  "serial": 459,
  "lineage": "55ec6427-4fe1-81cd-8c5e-93d440aa0585",
  "resources": [
    {
      "module": "module.includes.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:300326902600:security-group/sg-00568d8e870d78093",
            "description": "EKS cluster security group.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow cluster egress access to the Internet.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00568d8e870d78093",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow pods to communicate with the EKS cluster API.",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09cf9b02c5fc7da07"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "snyk-demo-eks-w8w5o2022071915135306220000000a",
            "name_prefix": "snyk-demo-eks-w8w5o",
            "owner_id": "300326902600",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "snyk-demo-eks-w8w5o-eks_cluster_sg"
            },
            "tags_all": {
              "Name": "snyk-demo-eks-w8w5o-eks_cluster_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-06a175864b219d14c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.includes.module.vpc.aws_vpc.this",
            "module.includes.random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.includes.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "workers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:300326902600:security-group/sg-09cf9b02c5fc7da07",
            "description": "Security group for all nodes in the cluster.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow nodes all egress to the Internet.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09cf9b02c5fc7da07",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow node to communicate with each other.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Allow pods running extension API servers on port 443 to receive communication from cluster control plane.",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00568d8e870d78093"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Allow workers pods to receive communication from the cluster control plane.",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00568d8e870d78093"
                ],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "snyk-demo-eks-w8w5o20220719151352052400000009",
            "name_prefix": "snyk-demo-eks-w8w5o",
            "owner_id": "300326902600",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "snyk-demo-eks-w8w5o-eks_worker_sg",
              "kubernetes.io/cluster/snyk-demo-eks-w8w5o": "owned"
            },
            "tags_all": {
              "Name": "snyk-demo-eks-w8w5o-eks_worker_sg",
              "kubernetes.io/cluster/snyk-demo-eks-w8w5o": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-06a175864b219d14c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.includes.module.vpc.aws_vpc.this",
            "module.includes.random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.includes.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow cluster egress access to the Internet.",
            "from_port": 0,
            "id": "sgrule-387642683",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-00568d8e870d78093",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.includes.module.eks.aws_security_group.cluster",
            "module.includes.module.vpc.aws_vpc.this",
            "module.includes.random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.includes.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_https_worker_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow pods to communicate with the EKS cluster API.",
            "from_port": 443,
            "id": "sgrule-401916700",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-00568d8e870d78093",
            "self": false,
            "source_security_group_id": "sg-09cf9b02c5fc7da07",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.includes.module.eks.aws_security_group.cluster",
            "module.includes.module.eks.aws_security_group.workers",
            "module.includes.module.vpc.aws_vpc.this",
            "module.includes.random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.includes.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow nodes all egress to the Internet.",
            "from_port": 0,
            "id": "sgrule-468256327",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-09cf9b02c5fc7da07",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.includes.module.eks.aws_security_group.workers",
            "module.includes.module.vpc.aws_vpc.this",
            "module.includes.random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.includes.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow workers pods to receive communication from the cluster control plane.",
            "from_port": 1025,
            "id": "sgrule-1416160705",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-09cf9b02c5fc7da07",
            "self": false,
            "source_security_group_id": "sg-00568d8e870d78093",
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.includes.module.eks.aws_security_group.cluster",
            "module.includes.module.eks.aws_security_group.workers",
            "module.includes.module.vpc.aws_vpc.this",
            "module.includes.random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.includes.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow pods running extension API servers on port 443 to receive communication from cluster control plane.",
            "from_port": 443,
            "id": "sgrule-1299888068",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-09cf9b02c5fc7da07",
            "self": false,
            "source_security_group_id": "sg-00568d8e870d78093",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.includes.module.eks.aws_security_group.cluster",
            "module.includes.module.eks.aws_security_group.workers",
            "module.includes.module.vpc.aws_vpc.this",
            "module.includes.random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.includes.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow node to communicate with each other.",
            "from_port": 0,
            "id": "sgrule-2284690643",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-09cf9b02c5fc7da07",
            "self": false,
            "source_security_group_id": "sg-09cf9b02c5fc7da07",
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.includes.module.eks.aws_security_group.workers",
            "module.includes.module.vpc.aws_vpc.this",
            "module.includes.random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.includes.module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06c15d995e8607041",
            "association_id": "eipassoc-0265a9b85eeb38eb9",
            "domain": "vpc",
            "id": "eipalloc-06c15d995e8607041",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0b8f51a881f87fbee",
            "private_dns": "ip-10-0-4-126.ec2.internal",
            "private_ip": "10.0.4.126",
            "public_dns": "ec2-3-229-43-228.compute-1.amazonaws.com",
            "public_ip": "3.229.43.228",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "snyk-demo-vpc-us-east-1a",
              "kubernetes.io/cluster/snyk-demo-eks-w8w5o": "shared"
            },
            "tags_all": {
              "Name": "snyk-demo-vpc-us-east-1a",
              "kubernetes.io/cluster/snyk-demo-eks-w8w5o": "shared"
            },
            "vpc": true
          },
          "dependencies": [
            "module.includes.data.aws_availability_zones.available",
            "module.includes.random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.includes.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:300326902600:internet-gateway/igw-03ed76ce9fba9dbfc",
            "id": "igw-03ed76ce9fba9dbfc",
            "owner_id": "300326902600",
            "tags": {
              "Name": "snyk-demo-vpc",
              "kubernetes.io/cluster/snyk-demo-eks-w8w5o": "shared"
            },
            "tags_all": {
              "Name": "snyk-demo-vpc",
              "kubernetes.io/cluster/snyk-demo-eks-w8w5o": "shared"
            },
            "vpc_id": "vpc-06a175864b219d14c"
          },
          "dependencies": [
            "module.includes.module.vpc.aws_vpc.this",
            "module.includes.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.includes.random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.includes.module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06c15d995e8607041",
            "connectivity_type": "public",
            "id": "nat-0e2b8d51c73363a8b",
            "network_interface_id": "eni-0b8f51a881f87fbee",
            "private_ip": "10.0.4.126",
            "public_ip": "3.229.43.228",
            "subnet_id": "subnet-050c64dca16a448b4",
            "tags": {
              "Name": "snyk-demo-vpc-us-east-1a",
              "kubernetes.io/cluster/snyk-demo-eks-w8w5o": "shared"
            },
            "tags_all": {
              "Name": "snyk-demo-vpc-us-east-1a",
              "kubernetes.io/cluster/snyk-demo-eks-w8w5o": "shared"
            }
          },
          "dependencies": [
            "module.includes.data.aws_availability_zones.available",
            "module.includes.module.vpc.aws_eip.nat",
            "module.includes.module.vpc.aws_internet_gateway.this",
            "module.includes.module.vpc.aws_subnet.public",
            "module.includes.module.vpc.aws_vpc.this",
            "module.includes.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.includes.random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.includes.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-039b8d6beb8ff71f01080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0e2b8d51c73363a8b",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-039b8d6beb8ff71f0",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.includes.data.aws_availability_zones.available",
            "module.includes.module.vpc.aws_eip.nat",
            "module.includes.module.vpc.aws_internet_gateway.this",
            "module.includes.module.vpc.aws_nat_gateway.this",
            "module.includes.module.vpc.aws_route_table.private",
            "module.includes.module.vpc.aws_subnet.public",
            "module.includes.module.vpc.aws_vpc.this",
            "module.includes.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.includes.random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.includes.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-03ed76ce9fba9dbfc",
            "id": "r-rtb-0d112cd769a3994d81080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d112cd769a3994d8",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.includes.module.vpc.aws_internet_gateway.this",
            "module.includes.module.vpc.aws_route_table.public",
            "module.includes.module.vpc.aws_vpc.this",
            "module.includes.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.includes.random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.includes.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:300326902600:route-table/rtb-039b8d6beb8ff71f0",
            "id": "rtb-039b8d6beb8ff71f0",
            "owner_id": "300326902600",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0e2b8d51c73363a8b",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "snyk-demo-vpc-private",
              "kubernetes.io/cluster/snyk-demo-eks-w8w5o": "shared"
            },
            "tags_all": {
              "Name": "snyk-demo-vpc-private",
              "kubernetes.io/cluster/snyk-demo-eks-w8w5o": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-06a175864b219d14c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.includes.data.aws_availability_zones.available",
            "module.includes.module.vpc.aws_vpc.this",
            "module.includes.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.includes.random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.includes.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:300326902600:route-table/rtb-0d112cd769a3994d8",
            "id": "rtb-0d112cd769a3994d8",
            "owner_id": "300326902600",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03ed76ce9fba9dbfc",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "snyk-demo-vpc-public",
              "kubernetes.io/cluster/snyk-demo-eks-w8w5o": "shared"
            },
            "tags_all": {
              "Name": "snyk-demo-vpc-public",
              "kubernetes.io/cluster/snyk-demo-eks-w8w5o": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-06a175864b219d14c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.includes.module.vpc.aws_vpc.this",
            "module.includes.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.includes.random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.includes.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09297c033915b0e13",
            "route_table_id": "rtb-039b8d6beb8ff71f0",
            "subnet_id": "subnet-09b35110a487517bb"
          },
          "dependencies": [
            "module.includes.data.aws_availability_zones.available",
            "module.includes.module.vpc.aws_route_table.private",
            "module.includes.module.vpc.aws_subnet.private",
            "module.includes.module.vpc.aws_vpc.this",
            "module.includes.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.includes.random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0740de82e1175f64f",
            "route_table_id": "rtb-039b8d6beb8ff71f0",
            "subnet_id": "subnet-0740635e9b399247c"
          },
          "dependencies": [
            "module.includes.data.aws_availability_zones.available",
            "module.includes.module.vpc.aws_route_table.private",
            "module.includes.module.vpc.aws_subnet.private",
            "module.includes.module.vpc.aws_vpc.this",
            "module.includes.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.includes.random_string.suffix"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0354ecd1437a59e4a",
            "route_table_id": "rtb-039b8d6beb8ff71f0",
            "subnet_id": "subnet-018afd439677a419b"
          },
          "dependencies": [
            "module.includes.data.aws_availability_zones.available",
            "module.includes.module.vpc.aws_route_table.private",
            "module.includes.module.vpc.aws_subnet.private",
            "module.includes.module.vpc.aws_vpc.this",
            "module.includes.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.includes.random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.includes.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0900d297482925c68",
            "route_table_id": "rtb-0d112cd769a3994d8",
            "subnet_id": "subnet-050c64dca16a448b4"
          },
          "dependencies": [
            "module.includes.data.aws_availability_zones.available",
            "module.includes.module.vpc.aws_route_table.public",
            "module.includes.module.vpc.aws_subnet.public",
            "module.includes.module.vpc.aws_vpc.this",
            "module.includes.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.includes.random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d61af631fadbde62",
            "route_table_id": "rtb-0d112cd769a3994d8",
            "subnet_id": "subnet-08506ae2aba39e024"
          },
          "dependencies": [
            "module.includes.data.aws_availability_zones.available",
            "module.includes.module.vpc.aws_route_table.public",
            "module.includes.module.vpc.aws_subnet.public",
            "module.includes.module.vpc.aws_vpc.this",
            "module.includes.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.includes.random_string.suffix"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d80cfc0e12388a2c",
            "route_table_id": "rtb-0d112cd769a3994d8",
            "subnet_id": "subnet-091c461b22f97d77e"
          },
          "dependencies": [
            "module.includes.data.aws_availability_zones.available",
            "module.includes.module.vpc.aws_route_table.public",
            "module.includes.module.vpc.aws_subnet.public",
            "module.includes.module.vpc.aws_vpc.this",
            "module.includes.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.includes.random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.includes.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:300326902600:subnet/subnet-09b35110a487517bb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09b35110a487517bb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "300326902600",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "snyk-demo-vpc-private-us-east-1a",
              "kubernetes.io/cluster/snyk-demo-eks-w8w5o": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "snyk-demo-vpc-private-us-east-1a",
              "kubernetes.io/cluster/snyk-demo-eks-w8w5o": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-06a175864b219d14c"
          },
          "dependencies": [
            "module.includes.data.aws_availability_zones.available",
            "module.includes.module.vpc.aws_vpc.this",
            "module.includes.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.includes.random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:300326902600:subnet/subnet-0740635e9b399247c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0740635e9b399247c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "300326902600",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "snyk-demo-vpc-private-us-east-1b",
              "kubernetes.io/cluster/snyk-demo-eks-w8w5o": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "snyk-demo-vpc-private-us-east-1b",
              "kubernetes.io/cluster/snyk-demo-eks-w8w5o": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-06a175864b219d14c"
          },
          "dependencies": [
            "module.includes.data.aws_availability_zones.available",
            "module.includes.module.vpc.aws_vpc.this",
            "module.includes.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.includes.random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:300326902600:subnet/subnet-018afd439677a419b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-018afd439677a419b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "300326902600",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "snyk-demo-vpc-private-us-east-1c",
              "kubernetes.io/cluster/snyk-demo-eks-w8w5o": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "snyk-demo-vpc-private-us-east-1c",
              "kubernetes.io/cluster/snyk-demo-eks-w8w5o": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-06a175864b219d14c"
          },
          "dependencies": [
            "module.includes.data.aws_availability_zones.available",
            "module.includes.module.vpc.aws_vpc.this",
            "module.includes.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.includes.random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.includes.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:300326902600:subnet/subnet-050c64dca16a448b4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-050c64dca16a448b4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "300326902600",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "snyk-demo-vpc-public-us-east-1a",
              "kubernetes.io/cluster/snyk-demo-eks-w8w5o": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "snyk-demo-vpc-public-us-east-1a",
              "kubernetes.io/cluster/snyk-demo-eks-w8w5o": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-06a175864b219d14c"
          },
          "dependencies": [
            "module.includes.data.aws_availability_zones.available",
            "module.includes.module.vpc.aws_vpc.this",
            "module.includes.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.includes.random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:300326902600:subnet/subnet-08506ae2aba39e024",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08506ae2aba39e024",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "300326902600",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "snyk-demo-vpc-public-us-east-1b",
              "kubernetes.io/cluster/snyk-demo-eks-w8w5o": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "snyk-demo-vpc-public-us-east-1b",
              "kubernetes.io/cluster/snyk-demo-eks-w8w5o": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-06a175864b219d14c"
          },
          "dependencies": [
            "module.includes.data.aws_availability_zones.available",
            "module.includes.module.vpc.aws_vpc.this",
            "module.includes.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.includes.random_string.suffix"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:300326902600:subnet/subnet-091c461b22f97d77e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-091c461b22f97d77e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "300326902600",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "snyk-demo-vpc-public-us-east-1c",
              "kubernetes.io/cluster/snyk-demo-eks-w8w5o": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "snyk-demo-vpc-public-us-east-1c",
              "kubernetes.io/cluster/snyk-demo-eks-w8w5o": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-06a175864b219d14c"
          },
          "dependencies": [
            "module.includes.data.aws_availability_zones.available",
            "module.includes.module.vpc.aws_vpc.this",
            "module.includes.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.includes.random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.includes.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:300326902600:vpc/vpc-06a175864b219d14c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03f4587eca9f9e6ab",
            "default_route_table_id": "rtb-004641504f87b5069",
            "default_security_group_id": "sg-0aad5e525fa148824",
            "dhcp_options_id": "dopt-2e6c2755",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-06a175864b219d14c",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-004641504f87b5069",
            "owner_id": "300326902600",
            "tags": {
              "Name": "snyk-demo-vpc",
              "kubernetes.io/cluster/snyk-demo-eks-w8w5o": "shared"
            },
            "tags_all": {
              "Name": "snyk-demo-vpc",
              "kubernetes.io/cluster/snyk-demo-eks-w8w5o": "shared"
            }
          },
          "dependencies": [
            "module.includes.random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "all_worker_mgmt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:300326902600:security-group/sg-065c0786aeec011f2",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-065c0786aeec011f2",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/8",
                  "172.16.0.0/12",
                  "192.168.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "all_worker_management2022071915135363350000000d",
            "name_prefix": "all_worker_management",
            "owner_id": "300326902600",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-06a175864b219d14c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.includes.module.vpc.aws_vpc.this",
            "module.includes.random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "snyk_rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:300326902600:security-group/sg-0598ef6b213e6fb2e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0598ef6b213e6fb2e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "snyk_demo_rds_sg",
            "name_prefix": "",
            "owner_id": "300326902600",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "snyk_demo_rds_sg"
            },
            "tags_all": {
              "Name": "snyk_demo_rds_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-06a175864b219d14c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.includes.module.vpc.aws_vpc.this",
            "module.includes.random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "worker_group_mgmt_one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:300326902600:security-group/sg-0942cb2cea6889842",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0942cb2cea6889842",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/8"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "worker_group_mgmt_one2022071915135361310000000c",
            "name_prefix": "worker_group_mgmt_one",
            "owner_id": "300326902600",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-06a175864b219d14c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.includes.module.vpc.aws_vpc.this",
            "module.includes.random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "worker_group_mgmt_two",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:300326902600:security-group/sg-058269446c107f427",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-058269446c107f427",
            "ingress": [
              {
                "cidr_blocks": [
                  "192.168.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "worker_group_mgmt_two2022071915135350380000000b",
            "name_prefix": "worker_group_mgmt_two",
            "owner_id": "300326902600",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-06a175864b219d14c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.includes.module.vpc.aws_vpc.this",
            "module.includes.random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:300326902600:subnet/subnet-0f6022b947663313b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f6022b947663313b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "300326902600",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Main"
            },
            "tags_all": {
              "Name": "Main"
            },
            "vpc_id": "vpc-06a175864b219d14c"
          },
          "dependencies": [
            "module.includes.module.vpc.aws_vpc.this",
            "module.includes.random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "secondary",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:300326902600:subnet/subnet-0db3088fefa751ce9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.64.0/19",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0db3088fefa751ce9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "300326902600",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Main"
            },
            "tags_all": {
              "Name": "Main"
            },
            "vpc_id": "vpc-06a175864b219d14c"
          },
          "dependencies": [
            "module.includes.module.vpc.aws_vpc.this",
            "module.includes.random_string.suffix"
          ]
        }
      ]
    }
  ]
}